# pdf-shuffle

./: .gitignore  README.md  pyproject.toml  run.py
dev/: walk.py
pdf_shuffle/: __init__.py  __main__.py  util.py  views.py
pdf_shuffle/static/: index.css  index.js
pdf_shuffle/templates/: index.html
